@@ -40,15 +40,39 @@ class Qualification < ActiveRecord::Base
   delegate :cover?, :active?, to: :duration
 
   class << self
+
+    def order_by_date
+      order('finish_at DESC')
+    end
+
     def active(date = nil)
       date ||= Date.today
       where('qualifications.start_at <= ?', date).
         where('qualifications.finish_at >= ? OR qualifications.finish_at IS NULL', date)
     end
 
-    def order_by_date
-      order('finish_at DESC')
+    def reactivateable(date = nil)
+      date ||= Date.today
+      joins(:qualification_kind).
+      where('qualifications.start_at <= ?', date).
+        where('qualifications.finish_at IS NULL OR ' \
+              '(qualification_kinds.reactivateable IS NULL AND ' \
+              ' qualifications.finish_at >= ?) OR ' \
+              "#{add_reactivateable_years_to_finish_at} >= ?",
+              date, date)
     end
+
+    private
+
+    def add_reactivateable_years_to_finish_at
+      case connection.adapter_name.downcase
+      when /sqlite/
+        "DATE(qualifications.finish_at, '+' || qualification_kinds.reactivateable || ' YEARS')"
+      else
+        'DATE_ADD(qualifications.finish_at, INTERVAL qualification_kinds.reactivateable YEAR)'
+      end
+    end
+
   end
 
   def duration
