@@ -1,0 +1,7 @@
+.btn-toolbar
+  .btn-group
+    = f.button(t('global.button.search'), class: 'btn btn-primary', value: 'search')
+  - if can?(:create, entry)
+    .btn-group
+      = f.button(t('.save_search'), class: 'btn btn-primary', value: 'save')
+  = link_to(t('global.button.cancel'), group_people_path(@group), class: 'link')
