@@ -9,13 +9,13 @@ require 'spec_helper'
 
 
 # Specs for listing and searching people
-describe PersonAccessibles do
+describe PersonReadables do
 
   [:index, :layer_search, :deep_search, :global].each do |action|
     context action do
       let(:action) { action }
       let(:user)   { role.person.reload }
-      let(:ability) { PersonAccessibles.new(user, action == :index ? group : nil) }
+      let(:ability) { PersonReadables.new(user, action == :index ? group : nil) }
 
       let(:all_accessibles) do
         people = Person.accessible_by(ability)
