@@ -1,3 +1,7 @@
+#  Copyright (c) 2012-2013, Jungwacht Blauring Schweiz. This file is part of
+#  hitobito and licensed under the Affero General Public License version 3
+#  or later. See the COPYING file at the top-level directory or at
+#  https://github.com/hitobito/hitobito.
 
 standard_de:
   label_format_id: <%= ActiveRecord::FixtureSet.identify(:standard) %>
